# dotenv-config

./: .env  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  cross.yml  lint.yml  rust.yml  test.yml
examples/: config.rs
src/: builder.rs  lib.rs
templates/: builder.j2
tests/: config.rs
