[package]
name = "dotenv_config"
version = "0.1.1"
edition = "2021"
authors = [
  "Hengfei Yang <hengfei.yang@gmail.com>",
]
description = "parse `env` to config struct for Rust"
homepage = "https://github.com/zinclabs/dotenv-config/"
repository = "https://github.com/zinclabs/dotenv-config/"
documentation = "https://docs.rs/dotenv_config"
keywords = ["environment", "env", "dotenv", "settings", "config"]
readme = "README.md"
license = "MIT"

[[examples]]
name = "config"

[lib]
proc-macro = true

[dependencies]
anyhow = "1"
dotenv = "0.15.0"
askama = "0.11.1"           # Type-safe, compiled Jinja-like templates for Rust
convert_case = "0.6.0"      # Convert a string to snake_case, kebab-case, or camelCase
