[package]
name = "dotenv_config"
version = "0.2.1"
edition = "2021"
authors = ["Hengfei Yang <hengfei.yang@gmail.com>"]
description = "parse `env` to config struct for Rust"
homepage = "https://github.com/openobserve/dotenv-config/"
repository = "https://github.com/openobserve/dotenv-config/"
documentation = "https://docs.rs/dotenv_config"
keywords = ["environment", "env", "dotenv", "settings", "config"]
readme = "README.md"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
anyhow = "1"
askama = "0.12.1"      # Type-safe, compiled Jinja-like templates for Rust
convert_case = "0.6.0" # Convert a string to snake_case, kebab-case, or camelCase

[dev-dependencies]
dotenvy = "0.15.7"
